[gd_scene load_steps=31 format=2]

[ext_resource path="res://Sprites/Mobs/HarquebusGuard/Idle/HarquebuseGuard_Idle-Sheet.png" type="Texture" id=1]
[ext_resource path="res://HarquebusEnemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Mobs/HarquebusGuard/Shoot/HarquebusGuard_Shoot-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/HarquebusGuard/Walk/HarquebuseMan_Walk-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 40, 32 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "Attack",
"speed": 20.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 5 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 60, 10 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 6, 5 )

[node name="HarquebusEnemy" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 51 )
animation = "Walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 4 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 11.5, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="DetectionZone" type="Area2D" parent="."]
position = Vector2( 63, -1 )
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 28 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
position = Vector2( -3, 4 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 29 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 15, 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="DetectionZone" to="." method="_on_DetectionZone_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
